--- a/pom.xml
+++ b/pom.xml
@@ -13,17 +13,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
-  <parent>
+<!--   <parent>
     <groupId>org.eclipse.smarthome</groupId>
     <artifactId>smarthome</artifactId>
     <version>0.9.0-SNAPSHOT</version>
   </parent>
+ -->
 
   <groupId>org.eclipse.smarthome.protocols.enocean</groupId>
   <artifactId>org.eclipse.smarthome.protocols.enocean.parent</artifactId>
   <packaging>pom</packaging>
   <name>${project.artifactId}</name>
+  <version>0.9.0-SNAPSHOT</version>
   <description>OSGi EnOcean Base Driver Projects, see OSGi EnOcean REG spec.</description>
 
   <developers>
@@ -69,12 +70,12 @@
     <dependency>
       <groupId>org.osgi</groupId>
       <artifactId>org.osgi.core</artifactId>
-      <version>4.2.0</version>
+      <version>5.0.0</version>
     </dependency>
     <dependency>
       <groupId>org.osgi</groupId>
       <artifactId>org.osgi.compendium</artifactId>
-      <version>4.2.0</version>
+      <version>5.0.0</version>
     </dependency>
     <!-- dependency>
       <groupId>org.osgi.service</groupId>
@@ -92,7 +93,13 @@
     <dependency>
       <groupId>com.neuronrobotics</groupId>
       <artifactId>nrjavaserial</artifactId>
-      <version>3.9.3</version>
+      <!--  <version>3.9.3</version>-->
+      <version>3.12.1</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.slf4j</groupId>
+    	<artifactId>slf4j-api</artifactId>
+    	<version>1.7.21</version>
     </dependency>
   </dependencies>
 
